--- a/CSS/main.css
+++ b/CSS/main.css
@@ -122,3 +122,57 @@ span{
     line-height: 1.25rem;
     opacity: .75;
 }
+
+@media all and (min-width: 64em){
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container{
+        max-width: 39.6875rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr; 
+        grid-template-rows: 0.9fr 1fr; 
+        gap: 0px 0px; 
+        grid-template-areas: 
+        "Community Community"
+        "Subscription Why"; 
+    }
+
+    .community{
+        grid-area: Community;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+
+    .community__title{
+        font-size: 1.5rem;
+        line-height: 1.75rem;
+    }
+
+    .community__sub{
+        font-size: 1.125rem;
+        line-height: 1.3125rem;
+    }
+
+    .community__body{
+        font-size: var(--font-size);
+        line-height: 1.625rem;
+    }
+
+    .Subscription { 
+        grid-area: Subscription; 
+
+    }
+
+    .btn{
+        padding: 0.9375rem 5.9375rem;
+    }
+
+    .Why { 
+        grid-area: Why; 
+
+    }
+}
